--- a/spotify/style.css
+++ b/spotify/style.css
@@ -1,1 +1,23 @@
+@font-face {
+  font-family:Spotify Circular;
+  font-weight:300;
+  src: url('https://github.com/ThinLiquid/brand-fonts/blob/main/spotify/Spotify%20Circular%20-%20Book.woff2');
+}
 
+@font-face {
+  font-family:Spotify Circular;
+  font-weight:800;
+  src: url('https://github.com/ThinLiquid/brand-fonts/blob/main/spotify/Spotify%20Circular%20-%20Black.woff2');
+}
+
+@font-face {
+  font-family:Spotify Circular;
+  font-weight:200;
+  src: url('https://github.com/ThinLiquid/brand-fonts/blob/main/spotify/Spotify%20Circular%20-%20Light.woff2');
+}
+
+@font-face {
+  font-family:Spotify Circular;
+  font-weight:600;
+  src: url('https://github.com/ThinLiquid/brand-fonts/blob/main/spotify/Spotify%20Circular%20-%20Bold.woff2');
+}
